# sim-im-test

./: .hgtags  CMakeLists.txt  ChangeLog  README  TODO.CMake  configure.in.in  dev-guide.txt  model.uml  sim.sln  sim.vcproj  sim.vcxproj  sim.vcxproj.filters  sim_vs_2008.sln  sim_vs_2010.sln
branches/0.9.4/sim/: AUTHORS.sim  CMakeLists.txt  Makefile.am  TODO.MingW  aboutdata.cpp  ballonmsg.cpp  ballonmsg.h  buffer.cpp  buffer.h  cfg.cpp  contacts.cpp  datepicker.cpp  editfile.cpp  editfile.h  exec.cpp  exec.h  fetch.cpp  fetch.h  fontedit.cpp  fontedit.h  icons.cpp  intedit.cpp  linklabel.cpp  listview.cpp  listview.h  log.cpp  message.cpp  plugins.cpp  preview.h  qcolorbutton.cpp  qcolorbutton.h  qjpegio.cpp  qkeybutton.cpp  sim.cpp  sim.rc  sim_pch.h  sim_qt2.dsp  simall_qt2.dsp  simapi.cpp  simapi.h  (+10 more)
branches/SIM_0_9/sim/: Makefile.am
branches/SIM_NEW/gkrellm_plugin/: Makefile.am  simkrell.h
branches/branch-playground/: CMakeLists.txt  ConfigureChecks.cmake  TODO  TODO.html  config.h.cmake  configure.in.in  porting-issues.html  sim.sln  sim.vcproj  simall.vcproj
branches/branch-playground/admin/: configure.in.min
branches/branch-playground/cmake/: FindOpenSSL.cmake  Jisp.cmake  Qt3Uic.cmake  SimPlugins.cmake  kde4uic.cmake
branches/branch-playground/po/: de.po  es.po  fr.po  he.po  hu.po  it.po  sk.po  sv.po  th.po  tr.po  uk.po
branches/branch-playground/sim/: CMakeLists.txt  aboutdata.cpp  aboutdata.h  ballonmsg.cpp  ballonmsg.h  buffer.cpp  buffer.h  builtinlogger.cpp  builtinlogger.h  cfg.cpp  cfg.h  clientlist.cpp  clientlist.h  clientmanager.cpp  clientmanager.h  cmddef.cpp  cmddef.h  contacts.cpp  contacts.h  datepicker.cpp  datepicker.h  editfile.cpp  editfile.h  event.cpp  event.h  exec.cpp  fetch.cpp  fetch.h  fetchclientprivate.h  fontedit.cpp  fontedit.h  html.h  html.ll  icons.cpp  icons.h  intedit.cpp  intedit.h  linklabel.cpp  linklabel.h  listview.cpp  (+55 more)
branches/branch-playground/simgui/: CMakeLists.txt  ballonmsg.cpp  datepicker.cpp  fontedit.cpp  fontedit.h  logindlg.cpp  qchildwidget.cpp  qkeybutton.cpp  textshow.h
branches/sim-qt4/lib/: Makefile.am  aboutdata.cpp  contacts.cpp  datepicker.h  fontedit.h  icons.h  johab_hangul.h  linklabel.h  listview.cpp  message.cpp  plugins.cpp  preview.h  qchildwidget.cpp  qchildwidget.h  qcolorbutton.h  qkeybutton.cpp  qkeybutton.h  simapi.cpp  simapi.h  simapi_pch.h  sockfactory.h  toolbtn.h  unquot.cpp
branches/win32_qt3/sim/: Makefile.am  sim.cpp
plugins/icq/: CMakeLists.txt  Makefile.am  aboutinfo.cpp  aboutinfo.h  aimconfig.cpp  aiminfo.cpp  aiminfo.h  aimservices.cpp  authorizationsnachandler.cpp  authorizationsnachandler.h  bartsnachandler.cpp  bartsnachandler.h  buddysnachandler.cpp  buddysnachandler.h  encodingdlg.cpp  homeinfo.cpp  homeinfo.h  icbmsnachandler.cpp  icbmsnachandler.h  icq.cpp  icq.h  icq.vcproj  icq.vcxproj  icqbuddy.cpp  icqbuffer.cpp  icqbuffer.h  icqclient.cpp  icqclient.h  icqconfig.cpp  icqconfig.h  icqcontact.cpp  icqcontact.h  icqcontactlist.cpp  icqcontactlist.h  icqdirect.cpp  icqgroup.cpp  icqgroup.h  icqicmb.cpp  icqinfo.cpp  icqinfo.h  (+50 more)
plugins/icq/events/: icqcontactupdate.cpp  icqcontactupdate.h
plugins/replace/: Makefile.am  replace.vcxproj
tags/SIM-0_8/: Makefile.am  aclocal.m4  configure.in.in  configure.lineno  redhat.spec  sim-suse80-cvs.spec  sim.kdevprj
trunk/: ALL_BUILD.vcproj  AUTHORS  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  Makefile.am  Makefile.in  README-SVN  README.CVS  TODO  TODO.CMake  acinclude.m4  aclocal.m4  altlinux.spec  asp-linux.spec  config.h.cmake  config.h.in  configure  configure.in  configure.in.in  configure.lineno  export_nix.py  fedora.spec  mandrake-kde2.spec  mandrake-kde2.specs  mandrake-kde3.specs  mandrake-qt.spec  mandrake-qt.specs  mandrake.spec  redhat.spec  resource.h  sim.dsp  sim.dsw  sim.kdevprj  sim.rc  sim.sln  sim.vcproj  simall.dsp  simapi.dsp  subdirs  (+1 more)
trunk/InstallShield/: sim._ip  sim.ipr
trunk/admin/: Makefile.common  acinclude.m4.in  am_edit  conf.change.pl  configure.in.min  cvs.sh  libtool.m4.in
trunk/cmake/: DistTarget.cmake  FindKDE3.cmake  FindLibIconv.cmake  FindOpenSSL.cmake  FindQt3.cmake  Flex.cmake  Jisp.cmake  KDE4InstallIcons.cmake  Po.cmake  Qt3Uic.cmake  SimPlugins.cmake  UiToFakeCpp.cmake  XGetText.cmake  cmake_make_dist.cmake.in
trunk/doc/: Makefile  Makefile.am  Makefile.in  changelog.html  features.html
trunk/gkrellm_plugin/: Makefile.am  configure.in.in  options.c  simkrell.c
trunk/idle/: IdleTracker.cpp  IdleTracker.def  IdleTracker.dsp  IdleTracker.plg
trunk/install_win32/: BrazilianPortuguese.isl  Catalan.isl  French.isl  German.isl  Greek.isl  Italian.isl  Slovak.isl  Ukrainian.isl  nsis_installer_full.nsi  opengl.iss  sim.iss  simfiles.iss  simfull.iss  ssl.iss  xml.iss
trunk/pict/: Makefile.in
trunk/po/: Makefile.in  bg.po  ca.po  cs.po  de.po  el.po  es.po  fr.po  he.po  hu.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  sim.pot  sk.po  sv.po  sw.po  th.po  tr.po  uk.po  zh_TW.po
trunk/sim/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.am.in  Makefile.in  README  about.cpp  about.h  aboutdata.h  ballonmsg.cpp  ballonmsg.h  buffer.cpp  buffer.h  builtinlogger.cpp  builtinlogger.h  cfg.cpp  cfg.h  chatwnd.cpp  chatwnd.h  client.cpp  client.h  cmddef.cpp  cmddef.h  configure.in.in  contacts.cpp  contacts.h  control.cpp  control.h  country.h  cuser.cpp  cuser.h  datepicker.cpp  datepicker.h  defs.h  dock.cpp  dock.h  editfile.cpp  editfile.h  editspell.cpp  (+106 more)
trunk/sim-qt4/: TODO  configure.in.in  fedora.spec  sim.dsp  sim.pri
trunk/sim-qt4-fullport/: AUTHORS.sim  Makefile.am.in  README  README.SVN  sim.pri
trunk/sounds/: Makefile.in
trunk/tools/: calling.txt
trunk/web/: changelog.html  cvs.html  cvs.shtml  download.shtml  icons.html  icons.shtml  index.html  install.shtml  maillist.shtml  news.html  news.shtml  screen.html  screen1.html  screen1.shtml  screen2.html  screen2.shtml  screen3.html  screen3.shtml  screenshots.shtml
trunk/xpstyle/: xpstyle.cpp  xpstyle.dsp  xpstyle.h  xpstyle.rc
trunk/zzz/: mandrake.spec  suse.spec
(+11813 files in other folders)
